@@ -12,6 +12,12 @@ Deprecated and removed features, and other changes affecting compatibility:
 * The function getdirentries is now deprecated, applications should use
   either getdents64, readdir64 or readdir.
 
+Major new features:
+
+* The getent tool now supports the --no-addrconfig option. The output of
+  getent with --no-addrconfig may contain addresses of families not
+  configured on the current host i.e. as-if you had not passed
+  AI_ADDRCONFIG to getaddrinfo calls.
 
 The following bugs are resolved with this release:
 
